<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_add_item"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/add_new_item" />
    <item
        android:id="@+id/nav_incoming"
        android:icon="@android:drawable/ic_menu_upload"
        android:title="@string/incoming_items" />
    <item
        android:id="@+id/nav_sold"
        android:icon="@android:drawable/ic_menu_send"
        android:title="@string/sold_items" />
    <item
        android:id="@+id/nav_stock"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/remaining_stock" />
    <item
        android:id="@+id/nav_financial"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/financial_statement" />
    <item
        android:id="@+id/nav_users"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/user_management" />
</menu>

